added property file and a method in General Methods named: loadFile

--- a/src/test/resources/app.properties
+++ b/src/test/resources/app.properties
@@ -2,3 +2,14 @@ baseURL = http://automationpractice.com/
 pTextOnEmailField = Please enter your email address to create an account.
 createAccountText = CREATE AN ACCOUNT
 createAccountButtonText = Create an account
+firstNameField = Schek
+lastNameField = Alex
+companyField = JustMe S.R.L.
+addressData = Strada Teiul Doamnei
+cityData = Bucharest
+zipCode = 023555
+additionalInfo = fvuneoveroivne
+mobilephone = 0723555444
+addressAlias = STD106
+registerButtonText = Register
+8errorsText = There are 8 errors
