added property file and a method in General Methods named: loadFile

--- a/src/test/resources/app.properties
+++ b/src/test/resources/app.properties
@@ -5,11 +5,11 @@ createAccountButtonText = Create an account
 firstNameField = Schek
 lastNameField = Alex
 companyField = JustMe S.R.L.
-addressData = Strada Teiul Doamnei
-cityData = Bucharest
-zipCode = 023555
+addressField = Strada Teiul Doamnei
+cityField = Bucharest
+zipCodeField = 023555
 additionalInfo = fvuneoveroivne
-mobilephone = 0723555444
+mobilePhoneField = 0723555444
 addressAlias = STD106
 registerButtonText = Register
 8errorsText = There are 8 errors
